# transcribeMCP

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-05-transcribe-mcp-server.md
docs/superpowers/specs/: 2026-07-05-transcribe-mcp-server-design.md  2026-07-06-transcribe-http-mcp-server-design.md
tests/: fakes.py  test_auth.py  test_client.py  test_config.py  test_server.py
tests/tools/: test_chats.py  test_metadata.py  test_minutes.py  test_notes.py  test_projects.py  test_sections.py  test_summaries.py  test_transcriptions.py  test_workspaces.py
transcribemcp/: auth.py  client.py  config.py  server.py
transcribemcp/tools/: chats.py  metadata.py  minutes.py  notes.py  projects.py  sections.py  summaries.py  transcriptions.py  workspaces.py
