[project]
name = "transcribemcp"
version = "0.1.0"
description = "MCP server for GovTech's Transcribe speech-to-text service"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
transcribemcp = "transcribemcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transcribemcp"]
